# box2d-android

./: .gitignore  AUTHORS  CONTRIBUTORS  NOTICE  README  import.pl  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_box2d.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
box2d-android/: build.gradle
box2d-android/src/main/: AndroidManifest.xml
box2d-android/src/main/java/box2d/: Body.java  ComparableTimSort.java  ContactFilter.java  ContactImpulse.java  ContactListener.java  FixtureDef.java  GdxRuntimeException.java  LongArray.java  LongMap.java  MathUtils.java  Pool.java  QueryCallback.java  RayCastCallback.java  Shape.java  Sort.java  TimSort.java  Vector2.java  World.java
box2d-android/src/main/jni/: CMakeLists.txt
box2d-android/src/main/jni/Box2D/: CircleShape.cpp  ContactImpulse.cpp  LineJoint.cpp  Manifold.cpp  MouseJoint.cpp  PolygonShape.h  RevoluteJoint.h  Shape.h  World.h
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk
jni/Box2D/: Body.cpp  Body.h  Box2D.h  CircleShape.cpp  CircleShape.h  Contact.cpp  Contact.h  ContactImpulse.cpp  ContactImpulse.h  DistanceJoint.cpp  DistanceJoint.h  Fixture.cpp  Fixture.h  FrictionJoint.cpp  FrictionJoint.h  GearJoint.cpp  GearJoint.h  Joint.cpp  Joint.h  LineJoint.h  Manifold.cpp  Manifold.h  MouseJoint.h  PolygonShape.cpp  PrismaticJoint.cpp  PrismaticJoint.h  PulleyJoint.cpp  PulleyJoint.h  RevoluteJoint.cpp  Shape.cpp  World.cpp
jni/Box2D/Collision/: b2BroadPhase.cpp  b2BroadPhase.h  b2CollideCircle.cpp  b2CollidePolygon.cpp  b2Collision.cpp  b2Collision.h  b2Distance.cpp  b2Distance.h  b2DynamicTree.cpp  b2DynamicTree.h  b2TimeOfImpact.cpp  b2TimeOfImpact.h
jni/Box2D/Collision/Shapes/: b2CircleShape.cpp  b2CircleShape.h  b2PolygonShape.cpp  b2PolygonShape.h  b2Shape.h
jni/Box2D/Common/: b2BlockAllocator.cpp  b2BlockAllocator.h  b2Math.cpp  b2Math.h  b2Settings.cpp  b2Settings.h  b2StackAllocator.cpp  b2StackAllocator.h
jni/Box2D/Dynamics/: b2Body.cpp  b2Body.h  b2ContactManager.cpp  b2ContactManager.h  b2Fixture.cpp  b2Fixture.h  b2Island.cpp  b2Island.h  b2TimeStep.h  b2World.cpp  b2World.h  b2WorldCallbacks.cpp  b2WorldCallbacks.h
jni/Box2D/Dynamics/Contacts/: b2CircleContact.cpp  b2CircleContact.h  b2Contact.cpp  b2Contact.h  b2ContactSolver.cpp  b2ContactSolver.h  b2PolygonAndCircleContact.cpp  b2PolygonAndCircleContact.h  b2PolygonContact.cpp  b2PolygonContact.h  b2TOISolver.cpp  b2TOISolver.h
jni/Box2D/Dynamics/Joints/: b2DistanceJoint.cpp  b2DistanceJoint.h  b2FrictionJoint.cpp  b2FrictionJoint.h  b2GearJoint.cpp  b2GearJoint.h  b2Joint.cpp  b2Joint.h  b2LineJoint.cpp  b2LineJoint.h  b2MouseJoint.cpp  b2MouseJoint.h  b2PrismaticJoint.cpp  b2PrismaticJoint.h  b2PulleyJoint.cpp  b2PulleyJoint.h  b2RevoluteJoint.cpp  b2RevoluteJoint.h  b2WeldJoint.cpp  b2WeldJoint.h
src/box2d/: Array.java  BodyDef.java  CircleShape.java  Contact.java  ContactFilter.java  ContactListener.java  DestructionListener.java  Disposable.java  Filter.java  Fixture.java  Joint.java  JointDef.java  JointEdge.java  Manifold.java  MassData.java  Matrix3.java  PolygonShape.java  QueryCallback.java  Transform.java  World.java  WorldManifold.java
src/box2d/joints/: DistanceJointDef.java  FrictionJoint.java  FrictionJointDef.java  GearJoint.java  LineJoint.java  MouseJointDef.java  PrismaticJoint.java  PrismaticJointDef.java  PulleyJoint.java  RevoluteJoint.java  RevoluteJointDef.java
(+19 files in other folders)
